# Uniprot_MCP_Client

./: LICENSE  Profetch.dxt  README.md  Uniport_MCP_Client.dxt  check_mcp_zip.py  local.dxt  manifest_check.py  pyproject.toml  zip.py
Profetch/: __init__.py  bridge.py  cli.py  main.py  mcp_server.py  setup.py
Profetch/temp_mcp/httpx-0.28.1.dist-info/: RECORD
Profetch/temp_mcp/jsonschema-4.24.0.dist-info/: RECORD
Profetch/temp_mcp/mcp-1.11.0.dist-info/: RECORD
Profetch/temp_mcp/python_dotenv-1.1.1.dist-info/: RECORD
Profetch/temp_mcp/uvicorn-0.35.0.dist-info/: RECORD
STRINGmcp/: .gitignore  README.md
tests/: __init__.py  test_main.py
