[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Uniport_MCP_Client"
version = "0.1.0"
description = "A Python package for uniport_mcp_client"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shrihari Kamalann Kumaraguruparan", email = "kkshrihari@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]



[project.urls]
Homepage = "https://github.com/Shrihari Kamalan Kumaraguruparan/Uniport_MCP_Client"
Repository = "https://github.com/Shrihari Kamalan Kumaraguruparan/Uniport_MCP_Client"
Documentation = "https://github.com/Shrihari Kamalan Kumaraguruparan/Uniport_MCP_Client#readme"
Issues = "https://github.com/Shrihari Kamalan Kumaraguruparan/Uniport_MCP_Client/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["Profetch*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=Profetch --cov-report=term-missing" 